--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,35 @@
   --abu: rgb(105, 105, 105);
   --semi-transparent: #ffffff99;
 }
+.loader {
+  border: 4px solid #bdbdbd;
+  border-radius: 50%;
+  border-top: 3px solid #3498db;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 #ajax-result {
   position: relative;
 }
@@ -261,6 +290,7 @@ main {
 .close-pwd {
   margin: 0 10px;
   cursor: pointer;
+  height: 15px;
 }
 .wallet {
   background-color: var(--bg3);
@@ -389,6 +419,22 @@ main {
 #login section {
   width: 100%;
 }
+
+#login .float {
+  position: absolute;
+  top: 0;
+  background-color: #e05656f1;
+  color: white;
+}
+
+div#info {
+  position: relative;
+  margin-bottom: 33px;
+}
+#login div h2 {
+  margin: 22px 0 0;
+}
+
 #login form {
   background-color: var(--bg);
   padding: 25px 15px;
@@ -434,6 +480,25 @@ main {
   border: 1px solid var(--bg2);
 }
 #login-form input[type="submit"]:hover {
+  cursor: pointer;
+  background-color: var(--abu);
+  color: var(--bg2);
+}
+#login-form .submit-button {
+  font-weight: bold;
+  background-color: var(--bg2);
+  color: var(--bg);
+  text-align: center;
+  width: 100%;
+  min-height: 40px;
+  border-radius: 5px;
+  border: 1px solid var(--bg2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 13px;
+}
+#login-form .submit-button:hover {
   cursor: pointer;
   background-color: var(--abu);
   color: var(--bg2);
@@ -534,6 +599,12 @@ label {
   .hamburger {
     display: flex;
   }
+
+  .float {
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
 }
 
 @media (min-width: 768px) {
@@ -549,6 +620,10 @@ label {
   }
   h3#welcome {
     font-size: xx-large;
+  }
+  div#info {
+    position: relative;
+    width: 700px;
   }
   main#login {
     display: flex;
@@ -580,6 +655,10 @@ label {
 
   .pwd-box {
     width: 700px;
+  }
+
+  #login-form .submit-button {
+    font-size: 15px;
   }
 
   section {
